# PaperVerifier

./: .env.example  .gitignore  README.md  README.zh-CN.md  chemverify  chemverify.cmd  config.toml  pyproject.toml
apps/web/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: activity-mark.tsx  (+4 more)
research/benchmarks/: prepare_benchmarks.py
scripts/: install.ps1  install.sh
src/chemsearch/: cli.py
src/chemverify/: __init__.py  acl_anthology.py  branding.py  cancel.py  cli.py  config.py  corpus_catalog.py  devices.py  encoders.py  grobid_client.py  index_progress.py  indexer.py  mineru_pipeline.py  models.py  offline.py  pdf_parser.py  planner.py  presentation.py  project_store.py  provider.py  reranker.py  runtime.py  search.py  search_current.py  storage.py  terminal_logging.py  utils.py  zotero_export.py
src/chemverify/api/: app.py  jobs.py  schemas.py
src/chemverify/deep_chat/: __init__.py  evidence.py  fact_extractor.py  generator.py  models.py  planner.py  retriever.py  service.py  store.py  verifier.py
src/paper_search_agent/: cli.py  models.py  project_store.py
src/paper_search_agent/api/: app.py  schemas.py
tests/: test_api_runtime_reload.py  test_deep_chat_api.py  test_deep_chat_pipeline.py  test_mineru_pipeline.py  test_offline_pipeline.py  test_paper_viewer_pdf_api.py  test_presentation.py  test_projects_api.py  test_runtime_device_selection.py  test_search_current.py  test_search_pipeline.py  test_zotero_api.py  test_zotero_export.py
(+45 files in other folders)
